[gd_scene load_steps=3 format=2]

[ext_resource path="res://Source/UI/ChatBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Source/UI/Room.gd" type="Script" id=3]

[node name="Room" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatBox" parent="." instance=ExtResource( 1 )]
anchor_right = 0.716797
margin_left = 16.0
margin_top = 48.0
margin_right = 1.99988
margin_bottom = -17.0

[node name="Leave" type="Button" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 136.0
margin_bottom = 35.0
text = "Leave Lobby"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.734
anchor_right = 1.0
anchor_bottom = 0.053
margin_left = 0.383972
margin_top = 16.0
margin_right = -184.0
margin_bottom = 0.199999
text = "Member List:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MemberList" type="RichTextLabel" parent="."]
anchor_left = 0.734
anchor_top = 0.08
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.383972
margin_top = -3.8147e-06
margin_right = -16.0
margin_bottom = -17.0
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="send_message" from="ChatBox" to="." method="_on_ChatBox_send_message"]
[connection signal="button_up" from="Leave" to="." method="_on_Leave_button_up"]
